hphp/test/zend/good/Zend/tests/constants/fixtures/folder3/subfolder1/fixture.php
<?hh

function folder3_sub1_fixture() {
echo __DIR__ . "\n";
echo dirname(__FILE__) . "\n";
}
