hphp/test/zend/bad/objects_010.php
<?php

class test {
	function test() {
	}
	function __construct() {
	}
}

echo "Done\n";
?>